--- a/XO.Diagnostics.Bugsnag.OpenTelemetry/XO.Diagnostics.Bugsnag.OpenTelemetry.csproj
+++ b/XO.Diagnostics.Bugsnag.OpenTelemetry/XO.Diagnostics.Bugsnag.OpenTelemetry.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="OpenTelemetry" Version="1.5.0" />
     <PackageReference Include="OpenTelemetry.SemanticConventions" Version="1.0.0-rc9.9" />
   </ItemGroup>
