--- a/XO.Diagnostics.Bugsnag.OpenTelemetry/XO.Diagnostics.Bugsnag.OpenTelemetry.csproj
+++ b/XO.Diagnostics.Bugsnag.OpenTelemetry/XO.Diagnostics.Bugsnag.OpenTelemetry.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="6.0.0" />
     <PackageReference Include="OpenTelemetry" Version="1.5.0" />
     <PackageReference Include="OpenTelemetry.SemanticConventions" Version="1.0.0-rc9.9" />
   </ItemGroup>
