--- a/XO.Diagnostics.Bugsnag/XO.Diagnostics.Bugsnag.csproj
+++ b/XO.Diagnostics.Bugsnag/XO.Diagnostics.Bugsnag.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <Description>A simple HTTP client for the BugSnag API</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>$(PackageTags) bugsnag</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,6 +12,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.txt" Link="LICENSE.txt" Pack="true" PackagePath="/" />
+    <None Include="README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 
 </Project>
