--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
           --logger "GitHubActions"
           --logger "trx;LogFilePrefix=${{ github.job }}"
 
+      - uses: codecov/codecov-action@v3
+
       - name: Run dotnet pack
         run: >
           dotnet pack --no-build
